# aboleth

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.c
src/cpu/: cpu.c  cpu.h  instructions.c  instructions.h  registers.h
src/mem/: memory.c  memory.h
src/rom/: rom.c  rom.h
src/sys/: window.h
src/sys/sdl2/: sdl2_window.c
